# modern-code

./: README.md  pyproject.toml  test.json
click_demo/: __init__.py  cli.py  json_ops.py
tests/: test_json_ops.py
typerapi/: api.py  cli.py  models.py  operations.py
