[project]
name = "click-demo"
version = "0.1.0"
description = "POC demonstrating Click, uv, and orjson best practices"
authors = []
dependencies = [
    "click>=8.1.7",
    "orjson>=3.9.15",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
clickdemo = "click_demo.cli:main" 