[project]
name = "typerapi"
version = "0.1.0"
description = "Modern CLI and API interface using Typer and FastAPI"
authors = []
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "orjson>=3.9.15",
    "rich>=13.7.0",  # For beautiful CLI output
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
typerapi = "typerapi.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["typerapi"] 